# ADS_API

./: .env_example  README.md  constants.py  fastapi.db  pyproject.toml
alembic/: env.py
alembic/versions/: 0adc13dbe7ed_createtable.py  3abca4b1d317_добавлена_модель_пользователя.py
app/: main.py
app/api/: ad.py
app/core/: base.py  config.py  db.py  user.py
app/crud/: ad.py
app/models/: __init__.py  ad.py  user.py
app/schemas/: ad.py
