[tool.poetry]
name = "itsoltest"
version = "0.1.0"
description = ""
authors = ["Pavel Yakovlev <pdyakovlev@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.1"
alembic = "^1.13.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
